--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Coffea Platform 🌐</title>
+	<title>Climate Monitor 🌐</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -89,8 +89,8 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
-				<h1 id="colorlib-logo"><a href="index.html">Coffea Platform</a></h1>
-				<span class="position"><a href="#">Hackathon:</a> UN Big Data 2022</span>
+				<h1 id="colorlib-logo"><a href="index.html">Climate Monitor</a></h1>
+				<span class="position"><a href="#">Data</a> Hackers</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
