--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
-						   					<h1>Coffee Farmers <br> Community </h1>
-						   					<h2>Powered by Team AlphaHack   
+						   					<h1>Climate <br> Monitor </h1>
+						   					<h2>Powered by Data Hackers   
 												
 											</div>
 					   				</div>
@@ -146,7 +146,7 @@
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>Our <br>Goal</h1>
-												<h2>Identify the relation between Farmers education level and the contribution to coffee bean prices, Poverty and Hunger in LATAM.</h2>
+												<h2>Data Visualization of Climate Change for Policy and decission makers.</h2>
 												
 											</div>
 					   				</div>
