--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">	<I></I>Intro</a></li>
 						<li><a href="#" data-nav-section="about">Story</a></li>	
-						<li><a href="#" data-nav-section="services">Research</a></li>						
+						<li><a href="#" data-nav-section="services">Monitory</a></li>						
 						<li><a href="#" data-nav-section="skills">Data</a></li>						
-						<li><a href="#" data-nav-section="experience">Solution</a></li>
+						<li><a href="#" data-nav-section="experience">Demo</a></li>
 						<li><a href="#" data-nav-section="work">Team</a></li>
 						<li><a href="#" data-nav-section="contact">Contact Us</a></li>
 					</ul>
