--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who We are?</h2>
-										<p><strong>🤖We are an International team of participants from China, Cameroon, Costa Rica and United States. </p>
-										<p>Our project is to identify the relation between Farmers education level and the contribution to coffee bean prices, Poverty and Hunger in LATAM.</p>
+										<p><strong>🤖We are a team of developers from Cameroon and Costa Rica located in the United States. </p>
+										<p>Our project is to help Farmers in LATAM and Africa.</p>
 									</div>
 								</div>
 							</div>
