--- a/index.html
+++ b/index.html
@@ -265,10 +265,9 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-<h3>Coffee Prices by Country - March 2022</h3>
+<h3>Climate search - Last 12 months </h3>
 
-<iframe width="100%" height="415" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR2CiboeILJWL74UpY-Th8ZlDcLdPdrj0MDg1HhMO8Q-mbykfZX3AM2ZDkPM6ZEka8E8FzgtdZKeUO1/pubchart?oid=1320689468&amp;format=interactive"></iframe>
-
+<script width="100%" height="415" type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/3140_RC01/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"floods","geo":"","time":"today 12-m"},{"keyword":"wildfires","geo":"","time":"today 12-m"},{"keyword":"electricity","geo":"","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"q=floods,wildfires,electricity&date=today 12-m,today 12-m,today 12-m","guestPath":"https://trends.google.com:443/trends/embed/"}); </script>
 <h4>Findings: </h4>
 					   					<p>1. 60% of global coffee supply comes from smallholder farmers. </p>
 										<p>2. Almost half of all smallholder coffee producers live in poverty.  </p>
